# shy

./: AUDIT_NOTES.md  Cargo.toml  PASS_GUARD.md
chk/: Cargo.toml
chk/src/: lib.rs
cli/: Cargo.toml
cli/src/: api.rs  flow.rs  lib.rs  report.rs
cli/tests/: flow_public_api.rs  public_api.rs  report_public_api.rs
clr/: Cargo.toml
clr/src/: lib.rs
coordinator/: Cargo.toml
coordinator/src/: api.rs  audit.rs  audit_sink.rs  chk_bridge.rs  clr_bridge.rs  doc_bridge.rs  end_to_end.rs  enforcement.rs  errors.rs  expl_bridge.rs  flow.rs  hbr_bridge.rs  lib.rs  memory_audit.rs  memory_store.rs  mod.rs  obs_sink.rs  shy_emit.rs  storage.rs  vfy_bridge.rs  wdn_bridge.rs
coordinator/tests/: audit_public_api.rs  audit_sink_public_api.rs  end_to_end_public_api.rs  in_memory_adapters.rs  public_api.rs  smoke.rs  storage_public_api.rs
core/src/: api.rs  domain_registry.rs  errors.rs  lib.rs  types.rs
core/tests/: domain_registry.rs  public_api.rs
doc/: Cargo.toml
doc/src/: lib.rs
docs/: STEALTHEYE_BOOTSTRAP.md
domains/: Cargo.toml
domains/audioshy/: Cargo.toml
domains/echo_domain/: Cargo.toml
domains/photoshy/: Cargo.toml
domains/src/: api.rs  lib.rs  (+1 more)
expl/: Cargo.toml
hbr/: Cargo.toml
obs/: Cargo.toml
tests/: allow_all_policy_integration.rs  cli_refusal_integration.rs  coordinator_enforcement_integration.rs  end_to_end_flow_integration.rs  enforcement_public_api.rs  integration_flow.rs  persistence_integration.rs  stacked_policy_integration.rs  v0_7_0_observability_integration.rs
vfy/: Cargo.toml
wdn/: Cargo.toml
whitehat/: Cargo.toml
(+28 files in other folders)
