[workspace]
resolver = "2"

members = [
    "core",
    "whitehat",
    "coordinator",
    "cli",
    "domains/photoshy",
    "domains/textshy",
    "domains/audioshy"
]

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "Proprietary"
authors = ["StealthEye LLC"]

[workspace.dependencies]
core = { path = "core" }
whitehat = { path = "whitehat" }
coordinator = { path = "coordinator" }
